...
                            ),
                            Padding(
                              padding:
                                  EdgeInsets.only(top: Get.size.height * 0.02),
                              child: Stack(
                                children: [
                                  CustomField(
                                    key: const Key("CustomField"),
                                    controller: controller.password,
                                    contentPadding: const EdgeInsets.only(
                                        left: 40, top: 5, bottom: 5, right: 10),
                                    label: TranslationKeys.password.tr,
                                    isSecure: true,
...
                                    if (controller.isAdmin()) {
                                      Get.offNamed(AppRoutes.settingsRoute);
                                    }
                                    controller.password.clear();
                                  },
                                  child: Container(
                                    key: const Key('login button'),
                                    alignment: Alignment.center,
                                    padding: const EdgeInsets.only(
                                        top: 10, bottom: 12, left: 8, right: 10),
                                    width: Get.size.width * 0.4,
                                    decoration: BoxDecoration(
                                        color: AppColors.kmainColorHex,
...
