...
    connectivityController.subscription.cancel();
    super.dispose();
  }

  final ConnectivityController connectivityController = Get.find();
  late TextEditingController password;
  final adminPassword = "1111";
  final AppService _appService = Get.find();
}

