...
                          DropdownButtonFormField(
                            key: SettingsKeys.dropDown,
                            decoration: InputDecoration(
                              label: Text(
                                TranslationKeys.connectionType.tr,
                              ),
                              suffixIcon: controller.selectedChoice != 'Wifi'
                                  ? IconButton(
                                      onPressed: controller.openNetworkSettings,
                                      icon: const Icon(Icons.settings))
                                  : null,
                              labelStyle:
                                  TextStyle(color: AppColors.kmainColor),
...
                            height: height,
                          ),
                          controller.selectedChoice == 'Wifi'
                              ? Form(
                                  key: controller.wifiFormKey,
                                  child: Column(
                                    key: const Key("wifi form"),
                                    children: [
                                      CustomField(
                                        key: SettingsKeys.wifiNetworkName,
                                        controller: controller.ssid,
                                        label: TranslationKeys.ssid.tr,
                                        validator: (value) {
...
