


import 'package:flutter/cupertino.dart';

abstract class SettingsKeys{
  static Key dropDown = const Key("connection type");
  static Key wifiNetworkName = const Key("network name");
  static Key wifiPassword = const Key("password");
  static Key wifiIp = const  Key("ip");
  static Key wifiPort = const Key("port");
  static Key connectButton = const Key("connect");
}